<?xml version='1.1' encoding='UTF-8'?>
<build>
  <actions>
    <hudson.model.CauseAction>
      <causeBag class="linked-hash-map">
        <entry>
          <hudson.triggers.SCMTrigger_-SCMTriggerCause/>
          <int>1</int>
        </entry>
      </causeBag>
    </hudson.model.CauseAction>
    <hudson.triggers.SCMTrigger_-BuildAction/>
    <org.jenkinsci.plugins.multiplescms.MultiSCMRevisionState plugin="multiple-scms@0.6">
      <revisionStates/>
    </org.jenkinsci.plugins.multiplescms.MultiSCMRevisionState>
    <hudson.plugins.git.util.BuildData plugin="git@3.8.0">
      <buildsByBranchName>
        <entry>
          <string>refs/remotes/origin/master</string>
          <hudson.plugins.git.util.Build>
            <marked plugin="git-client@2.7.1">
              <sha1>e51ec9c4c69880a444a1b2f00fe3630c3d31477e</sha1>
              <branches class="list">
                <hudson.plugins.git.Branch>
                  <sha1 reference="../../../sha1"/>
                  <name>refs/remotes/origin/master</name>
                </hudson.plugins.git.Branch>
              </branches>
            </marked>
            <revision reference="../marked"/>
            <hudsonBuildNumber>45</hudsonBuildNumber>
          </hudson.plugins.git.util.Build>
        </entry>
      </buildsByBranchName>
      <lastBuild reference="../buildsByBranchName/entry/hudson.plugins.git.util.Build"/>
      <remoteUrls>
        <string>https://github.com/nixvipin/myscripts.git</string>
      </remoteUrls>
    </hudson.plugins.git.util.BuildData>
    <hudson.plugins.git.GitTagAction plugin="git@3.8.0">
      <tags class="hudson.util.CopyOnWriteMap$Tree">
        <entry>
          <string>refs/remotes/origin/master</string>
          <list/>
        </entry>
      </tags>
      <ws>/data/workspace/My_Project1</ws>
    </hudson.plugins.git.GitTagAction>
    <hudson.plugins.git.util.BuildData plugin="git@3.8.0">
      <buildsByBranchName>
        <entry>
          <string>refs/remotes/origin/master</string>
          <hudson.plugins.git.util.Build>
            <marked plugin="git-client@2.7.1">
              <sha1>e27ebc0b19796e27b4c05f6816c044a140db559c</sha1>
              <branches class="list">
                <hudson.plugins.git.Branch>
                  <sha1 reference="../../../sha1"/>
                  <name>refs/remotes/origin/master</name>
                </hudson.plugins.git.Branch>
              </branches>
            </marked>
            <revision reference="../marked"/>
            <hudsonBuildNumber>45</hudsonBuildNumber>
          </hudson.plugins.git.util.Build>
        </entry>
      </buildsByBranchName>
      <lastBuild reference="../buildsByBranchName/entry/hudson.plugins.git.util.Build"/>
      <remoteUrls>
        <string>https://github.com/nixvipin/myproject.git</string>
      </remoteUrls>
      <index>2</index>
    </hudson.plugins.git.util.BuildData>
    <com.sonyericsson.rebuild.RebuildAction plugin="rebuild@1.28"/>
    <hudson.plugins.parameterizedtrigger.CapturedEnvironmentAction plugin="parameterized-trigger@2.35.2">
      <env serialization="custom">
        <unserializable-parents/>
        <tree-map>
          <default>
            <comparator class="hudson.util.CaseInsensitiveComparator"/>
          </default>
          <int>52</int>
          <string>_</string>
          <string>/data/jdk1.8/bin/java</string>
          <string>BUILD_DISPLAY_NAME</string>
          <string>#45</string>
          <string>BUILD_ID</string>
          <string>45</string>
          <string>BUILD_NUMBER</string>
          <string>45</string>
          <string>BUILD_TAG</string>
          <string>jenkins-My_Project1-45</string>
          <string>BUILD_URL</string>
          <string>http://35.165.237.227:8002/jenkins/job/My_Project1/45/</string>
          <string>CLASSPATH</string>
          <string></string>
          <string>EXECUTOR_NUMBER</string>
          <string>0</string>
          <string>GIT_BRANCH</string>
          <string>origin/master</string>
          <string>GIT_BRANCH_1</string>
          <string>origin/master</string>
          <string>GIT_COMMIT</string>
          <string>e51ec9c4c69880a444a1b2f00fe3630c3d31477e</string>
          <string>GIT_COMMIT_1</string>
          <string>e27ebc0b19796e27b4c05f6816c044a140db559c</string>
          <string>GIT_PREVIOUS_COMMIT</string>
          <string>a3f218ce30e04b1ca55c63de1a8bcbc513f9085e</string>
          <string>GIT_PREVIOUS_COMMIT_1</string>
          <string>e27ebc0b19796e27b4c05f6816c044a140db559c</string>
          <string>GIT_PREVIOUS_SUCCESSFUL_COMMIT</string>
          <string>a3f218ce30e04b1ca55c63de1a8bcbc513f9085e</string>
          <string>GIT_PREVIOUS_SUCCESSFUL_COMMIT_1</string>
          <string>e27ebc0b19796e27b4c05f6816c044a140db559c</string>
          <string>GIT_URL</string>
          <string>https://github.com/nixvipin/myscripts.git</string>
          <string>GIT_URL_1</string>
          <string>https://github.com/nixvipin/myproject.git</string>
          <string>HISTCONTROL</string>
          <string>ignoredups</string>
          <string>HISTSIZE</string>
          <string>1000</string>
          <string>HOME</string>
          <string>/root</string>
          <string>HOSTNAME</string>
          <string>ip-172-31-31-22.us-west-2.compute.internal</string>
          <string>HUDSON_HOME</string>
          <string>/root/.jenkins</string>
          <string>HUDSON_SERVER_COOKIE</string>
          <string>5159ad302a4d9708</string>
          <string>HUDSON_URL</string>
          <string>http://35.165.237.227:8002/jenkins/</string>
          <string>JAVA_HOME</string>
          <string>/data/jdk1.8</string>
          <string>JDK_JAVA_OPTIONS</string>
          <string> --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</string>
          <string>JENKINS_HOME</string>
          <string>/root/.jenkins</string>
          <string>JENKINS_SERVER_COOKIE</string>
          <string>5159ad302a4d9708</string>
          <string>JENKINS_URL</string>
          <string>http://35.165.237.227:8002/jenkins/</string>
          <string>JOB_BASE_NAME</string>
          <string>My_Project1</string>
          <string>JOB_DISPLAY_URL</string>
          <string>http://35.165.237.227:8002/jenkins/job/My_Project1/display/redirect</string>
          <string>JOB_NAME</string>
          <string>My_Project1</string>
          <string>JOB_URL</string>
          <string>http://35.165.237.227:8002/jenkins/job/My_Project1/</string>
          <string>LANG</string>
          <string>en_US.UTF-8</string>
          <string>LESSOPEN</string>
          <string>||/usr/bin/lesspipe.sh %s</string>
          <string>LOGNAME</string>
          <string>root</string>
          <string>LS_COLORS</string>
          <string>rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=01;05;37;41:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.Z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.jpg=01;35:*.jpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.axv=01;35:*.anx=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=01;36:*.au=01;36:*.flac=01;36:*.mid=01;36:*.midi=01;36:*.mka=01;36:*.mp3=01;36:*.mpc=01;36:*.ogg=01;36:*.ra=01;36:*.wav=01;36:*.axa=01;36:*.oga=01;36:*.spx=01;36:*.xspf=01;36:</string>
          <string>MAIL</string>
          <string>/var/spool/mail/root</string>
          <string>MAVEN_HOME</string>
          <string>/data/maven</string>
          <string>NODE_LABELS</string>
          <string>master</string>
          <string>NODE_NAME</string>
          <string>master</string>
          <string>PATH</string>
          <string>/data/jdk1.8/bin:/data/maven/bin:/data/jdk1.8/bin:/data/maven/bin:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin</string>
          <string>PWD</string>
          <string>/data/jenkins/bin</string>
          <string>RUN_CHANGES_DISPLAY_URL</string>
          <string>http://35.165.237.227:8002/jenkins/job/My_Project1/45/display/redirect?page=changes</string>
          <string>RUN_DISPLAY_URL</string>
          <string>http://35.165.237.227:8002/jenkins/job/My_Project1/45/display/redirect</string>
          <string>SHELL</string>
          <string>/bin/bash</string>
          <string>SHLVL</string>
          <string>2</string>
          <string>TERM</string>
          <string>xterm</string>
          <string>USER</string>
          <string>root</string>
          <string>WORKSPACE</string>
          <string>/data/workspace/My_Project1</string>
          <string>XDG_SESSION_ID</string>
          <string>51</string>
        </tree-map>
        <hudson.EnvVars>
          <default>
            <platform>UNIX</platform>
          </default>
        </hudson.EnvVars>
      </env>
    </hudson.plugins.parameterizedtrigger.CapturedEnvironmentAction>
  </actions>
  <queueId>75</queueId>
  <timestamp>1524999427516</timestamp>
  <startTime>1524999427519</startTime>
  <result>SUCCESS</result>
  <duration>28790</duration>
  <charset>UTF-8</charset>
  <keepLog>false</keepLog>
  <builtOn></builtOn>
  <workspace>/data/workspace/My_Project1</workspace>
  <hudsonVersion>2.118</hudsonVersion>
  <scm class="org.jenkinsci.plugins.multiplescms.MultiSCMChangeLogParser" plugin="multiple-scms@0.6">
    <scmLogParsers>
      <entry>
        <string>git https://github.com/nixvipin/myproject.git</string>
        <hudson.plugins.git.GitChangeLogParser plugin="git@3.8.0">
          <authorOrCommitter>false</authorOrCommitter>
        </hudson.plugins.git.GitChangeLogParser>
      </entry>
      <entry>
        <string>git https://github.com/nixvipin/myscripts.git</string>
        <hudson.plugins.git.GitChangeLogParser plugin="git@3.8.0">
          <authorOrCommitter>false</authorOrCommitter>
        </hudson.plugins.git.GitChangeLogParser>
      </entry>
    </scmLogParsers>
    <scmDisplayNames>
      <entry>
        <string>git https://github.com/nixvipin/myproject.git</string>
        <string>Git (git https://github.com/nixvipin/myproject.git)</string>
      </entry>
      <entry>
        <string>git https://github.com/nixvipin/myscripts.git</string>
        <string>Git (git https://github.com/nixvipin/myscripts.git)</string>
      </entry>
    </scmDisplayNames>
    <scmRepositoryBrowsers>
      <entry>
        <string>git https://github.com/nixvipin/myproject.git</string>
        <null/>
      </entry>
      <entry>
        <string>git https://github.com/nixvipin/myscripts.git</string>
        <null/>
      </entry>
    </scmRepositoryBrowsers>
  </scm>
  <culprits class="com.google.common.collect.RegularImmutableSortedSet">
    <string>root</string>
  </culprits>
</build>